Tests: Add testing framework
Add basic Google Test testing framework, code coverage and sample tests.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,3 +7,6 @@ include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
 conan_basic_setup(TARGETS)
 
 add_subdirectory(src)
+add_subdirectory(test)
+
+enable_testing()
