--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+coverage
+
 # Created by https://www.gitignore.io/api/vim,osx,c++,linux,cmake,emacs,python,windows,sublimetext,visualstudiocode
 # Edit at https://www.gitignore.io/?templates=vim,osx,c++,linux,cmake,emacs,python,windows,sublimetext,visualstudiocode
 
